--- a/docs/environment-doc.yaml
+++ b/docs/environment-doc.yaml
@@ -4,8 +4,9 @@ channels:
   - accessnri
   - defaults
 dependencies:
-  - python>=3.9
+  - python>=3.10
   - intake
+  - access-nri-intake
   - ipython
   - numpy
   - sphinx
