--- a/docs/environment-doc.yaml
+++ b/docs/environment-doc.yaml
@@ -6,7 +6,9 @@ channels:
   - free
 dependencies:
   - python>=3.10
-  - intake
+  - intake>=0.7.0
+  - intake-esm>=2023.7.7
+  - ecgtools>=2023.7.13
   - access-nri-intake
   - ipython
   - numpy
