--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,6 +5,11 @@ sphinx:
 
 formats: all
 
+build:
+  os: "ubuntu-20.04"
+  tools:
+    python: "mambaforge-4.10"
+
 conda:
   environment: docs/environment-doc.yaml
 
