--- a/docs/environment-doc.yaml
+++ b/docs/environment-doc.yaml
@@ -7,8 +7,7 @@ dependencies:
   - python>=3.10
   - access-nri-intake
   - apscheduler
-  - ipython
-  - numpy
+  - panel
   - sphinx
   - sphinx-autobuild
   - pip
