--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,8 +33,8 @@ jobs:
 
   conda:
     name: build and deploy to conda
-    #needs: pypi
-    #if: always() && needs.pypi.result == 'success'
+    needs: pypi
+    if: always() && needs.pypi.result == 'success'
     runs-on: "ubuntu-latest"
 
     steps:
