--- a/.conda/meta.yaml
+++ b/.conda/meta.yaml
@@ -1,5 +1,5 @@
 {% set data = load_setup_py_data(setup_file='../setup.py', from_recipe_dir=True) %}
-{% set version = '0.0.1' %}
+{% set version = data.get('version') %}
 {% set name = 'med-diagnostics' %}
 
 package:
