Add python matrix, support for macOSX and Windows

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,7 +35,11 @@ jobs:
     name: build and deploy to conda
     needs: pypi
     if: always() && needs.pypi.result == 'success'
-    runs-on: "ubuntu-latest"
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macOS-latest, ubuntu-latest, windows-latest]
+        python-version: ["3.10", "3.11"]
 
     steps:
       - name: Checkout source
@@ -45,7 +49,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v2
         with:
           miniconda-version: "latest"
-          python-version: 3.11
+          python-version: ${{ matrix.python-version }}
           environment-file: .conda/environment.yml
           auto-update-conda: false
           auto-activate-base: false
@@ -55,7 +59,7 @@ jobs:
         uses: uibcdf/action-build-and-upload-conda-packages@v1.2.0
         with:
           meta_yaml_dir: .conda
-          python-version: 3.11
+          python-version: ${{ matrix.python-version }}
           user: accessnri
           label: main
           token: ${{ secrets.anaconda_token }}
